--- a/asset/admin/scss/style.scss
+++ b/asset/admin/scss/style.scss
@@ -36,6 +36,7 @@ File: Main Css File
 28. Maps
 29. Account pages
 30. Menu
++ custom style
 31. Responsive
 */
 
@@ -69,4 +70,5 @@ File: Main Css File
 @import "maps";
 @import "account-pages";
 @import "menu";
+@import "custom-style";
 @import "responsive";
