--- a/asset/admin/scss/_responsive.scss
+++ b/asset/admin/scss/_responsive.scss
@@ -78,6 +78,9 @@ File: Responsive
   .app-search{
     margin-left: 60px;
   }
+  #input-komentar {
+    left: 0;
+  }
 }
 
 @media (max-width: 767px) {
