--- a/asset/admin/scss/_custom-style.scss
+++ b/asset/admin/scss/_custom-style.scss
@@ -25,6 +25,24 @@
     }
 }
 
+#hal-pertama, #hal-kedua {
+    overflow: hidden;
+    transition: height .25s ease-out;
+}
+
+.sembunyi {
+    height: 0;
+    visibility: hidden;
+}
+
+.error-input-file {
+    color: $danger;
+}
+
+.list-file-error {
+    padding-left: 20px;
+}
+
 #input-komentar {
     position: fixed;
     right: 0;
