--- a/asset/admin/css/style.css
+++ b/asset/admin/css/style.css
@@ -2578,7 +2578,7 @@ select.form-control:not([size]):not([multiple]),
 .bmd-form-group label {
   font-size: 14px;
   font-weight: 400;
-  color: #a7a7a7;
+  color: #707070;
   line-height: 24px;
 }
 
@@ -3134,6 +3134,19 @@ select.custom-file-control:not([size]):not([multiple]), select.form-control:not(
   text-shadow: #40c0c3 1px 1px, #3f51b5 2px 2px, #1e51a4 3px 3px;
 }
 
+.accountbg-custom {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background-image: url("/asset/admin/images/background.jpeg");
+  background-size: cover;
+}
+
+.card {
+  border: 7px groove #3f51b5;
+  border-radius: 10px;
+}
+
 /*
 File: Menu
 */
@@ -3687,6 +3700,24 @@ body.fixed-left .side-menu.left {
 }
 .list-diskusi:hover .card {
   background-color: rgba(63, 81, 181, 0.1);
+}
+
+#hal-pertama, #hal-kedua {
+  overflow: hidden;
+  transition: height 0.25s ease-out;
+}
+
+.sembunyi {
+  height: 0;
+  visibility: hidden;
+}
+
+.error-input-file {
+  color: #ef4f4c;
+}
+
+.list-file-error {
+  padding-left: 20px;
 }
 
 #input-komentar {
