--- a/asset/admin/scss/_form-elements.scss
+++ b/asset/admin/scss/_form-elements.scss
@@ -68,7 +68,8 @@ select.form-control:not([size]):not([multiple]),
 .bmd-form-group label{
   font-size: 14px;
   font-weight: 400;
-  color:$lightgray1;
+  // color:$lightgray1;
+  color: $muted;
   line-height: 24px;
 }
 .nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active {
