Update hal portfolio: tampil hasil desain

--- a/asset/admin/css/style.css
+++ b/asset/admin/css/style.css
@@ -3703,6 +3703,11 @@ body.fixed-left .side-menu.left {
   max-height: 480px;
 }
 
+.img-grid {
+  width: 200px;
+  height: 200px;
+}
+
 /*
 File: Responsive
 */
