--- a/asset/admin/scss/_account-pages.scss
+++ b/asset/admin/scss/_account-pages.scss
@@ -10,6 +10,13 @@
     background-size: cover;
 }
 
+.accountbg-custom {
+	position: fixed;
+  width: 100%;
+  height: 100%;
+  background-image: url("../images/background2.png");
+  background-size: cover;
+}
 
 .wrapper-page {
   max-width: 100%;
